--- a/Solutions/AdventOfCode.cabal
+++ b/Solutions/AdventOfCode.cabal
@@ -56,7 +56,8 @@ executable AdventOfHaskell
                       Tools.Coords,
                       Tools.Solution,
                       Y2015.Day1.Solution,
-                      Y2015.Day17.Solution
+                      Y2015.Day17.Solution,
+                      Y2016.Day13.Solution
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
