--- a/Solutions/AdventOfCode.cabal
+++ b/Solutions/AdventOfCode.cabal
@@ -58,7 +58,8 @@ executable AdventOfHaskell
                       Y2015.Day1.Solution,
                       Y2015.Day17.Solution,
                       Y2016.Day13.Solution,
-                      Y2017.Day12.Solution
+                      Y2017.Day12.Solution,
+                      Y2017.Day24.Solution
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
